@@ -1,3 +1,7 @@
+2010-06-30  smeghead <smeghead@users.sourceforge.jp>
+
+	* Starbug1の公式サイトのドメインを取ったので、公式サイトのURLを変更した。
+
 2010-06-17  smeghead <smeghead@users.sourceforge.jp>
 
 	* 1.3.14リリース
